# Collision_avoidance

./: README.md
ROS_packages/collision_avoidance/: package.xml
ROS_packages/collision_avoidance/doxygen_doc/html/: add__labTable_8cpp__incl.map  algoritmo__prevenzione__collisioni_8cpp__incl.map  doxygen.css  files.html  globals.html  globals_func.html  graph_legend.html  index.html  mainpage_8h.html  mainpage_8h_source.html  move__obstacle__case1_8cpp.html  move__obstacle__case1_8cpp__incl.map  move__obstacle__case2_8cpp__incl.map  move__obstacle__case2_8cpp__incl.md5  pages.html  todo.html
ROS_packages/collision_avoidance/doxygen_doc/html/search/: all_1.js  all_5.js  all_9.js  all_b.js  files_0.js  functions_0.js  functions_1.js  functions_3.js  functions_4.js  functions_5.js  searchdata.js  variables_1.js  variables_3.js  variables_4.js  variables_5.js  variables_7.js
ROS_packages/collision_avoidance/doxygen_doc/latex/: algoritmo__prevenzione__collisioni_8cpp.tex  index.tex  move__obstacle__case1_8cpp__incl.md5  move__obstacle__case3_8cpp.tex  refman.tex
ROS_packages/collision_avoidance/meshes/labTable_meshes/: table_rob_lab.dae
ROS_packages/collision_avoidance/src/: add_labTable.cpp  algoritmo_prevenzione_collisioni.cpp  move_obstacle_case3.cpp
ROS_packages/collision_avoidance/src/launch/: collion_av.launch  collision_av.launch
ROS_packages/collision_avoidance/worlds/: simulation.world
ROS_packages/fmauch_universal_robot/ur5e_gripper_moveit_config/config/: ur5.srdf  ur5_2.srdf
ROS_packages/fmauch_universal_robot/ur5e_gripper_moveit_config/launch/: laboratorio.rviz  moveit_rviz.launch  ur5e_gazebo.launch
collision_avoidance/: CMakeLists.txt
collision_avoidance/doxygen_doc/html/: add__labTable_8cpp.html  add__labTable_8cpp__incl.md5  algoritmo__prevenzione__collisioni_8cpp.html  globals_vars.html  menudata.js  move__obstacle__case2_8cpp.html  move__obstacle__case3_8cpp.html  move__obstacle__case3_8cpp__incl.map
collision_avoidance/doxygen_doc/html/search/: all_0.js  all_7.js  all_8.js  all_a.js  files_1.js  functions_2.js  variables_0.js  variables_2.js  variables_6.js
collision_avoidance/doxygen_doc/latex/: add__labTable_8cpp.tex  algoritmo__prevenzione__collisioni_8cpp__incl.md5  files.tex  mainpage_8h.tex  mainpage_8h_source.tex  move__obstacle__case1_8cpp.tex  move__obstacle__case2_8cpp.tex  move__obstacle__case3_8cpp__incl.md5  todo.tex
collision_avoidance/src/: mainpage.h  move_obstacle_case1.cpp  move_obstacle_case2.cpp
fmauch_universal_robot/ur5e_gripper_moveit_config/config/: ompl_planning.yaml
fmauch_universal_robot/ur5e_gripper_moveit_config/launch/: empty_world.launch  trajectory_execution.launch.xml
fmauch_universal_robot/ur_gazebo/launch/inc/: ur_control.launch.xml
